<resources>
    <string name="app_name">Covid19 Food</string>
    <string name="for_me">For ME</string>
    <string name="for_someone">For Someone</string>
    <string name="admin">Admin</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="lucas_charity_foundation">Lucas Charity Foundation</string>
    <string name="create_an_account">Create an account</string>
    <string name="address">Address</string>
    <string name="use_google_current_location">Use Google Current Location</string>
    <string name="when_you_need_food">When you need food?</string>
    <string name="what_time">What time?</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="no_history">No History</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="filter">Filter</string>
</resources>
