<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lucas_charity.covid19.activity.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.lucas_charity.covid19.activity.ui.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.lucas_charity.covid19.activity.ui.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>