<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".activity.FoodDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:alpha="10"
            android:background="@drawable/email_bg"
            android:hint="Full Name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_margin_half"
            android:paddingRight="@dimen/activity_margin_half"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="Autofill,HardcodedText,SpUsage" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_below="@id/full_name"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:alpha="10"
            android:background="@drawable/email_bg"
            android:hint="Phone Number"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_margin_half"
            android:paddingRight="@dimen/activity_margin_half"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="Autofill,HardcodedText,SpUsage" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_below="@id/phone"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:alpha="10"
            android:background="@drawable/email_bg"
            android:gravity="start"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/activity_margin_half"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_margin_half"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"
            android:textSize="@dimen/primary_title_size"
            tools:ignore="Autofill,SpUsage" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/address"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/black" />

        <Switch
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/use_google_current_location"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_title_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/when_you_need_food"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_title_size"
            android:textStyle="bold|italic"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_date"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/h"
            android:textStyle="bold"
            tools:ignore="SpUsage"
            tools:text="11-04-2020" />


        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/what_time"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_title_size"
            android:textStyle="bold|italic"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_time"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/h"
            android:textStyle="bold"
            tools:ignore="SpUsage"
            tools:text="01:00 PM" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_below="@id/time"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>